# kuroaria-DL

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: firefox-extension.yml
docs/: PRIVACY.md  bridge.md
extension/: README.md
extension/chrome/: background.js  manifest.json  popup.html  popup.js
extension/chrome/lib/: bridge-client.js  host-download.js  intercept.js  keepalive.js
extension/firefox/: background.js  manifest.json  popup.html  popup.js
extension/firefox/lib/: host-download.js  intercept.js  keepalive.js
scripts/: package-firefox-extension.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aria2.rs  aria2_process.rs  bridge.rs  commands.rs  lib.rs  main.rs  models.rs  persistence.rs  runtime.rs  sort_paths.rs  startup.rs  state.rs
src/components/: AddDownloadDialog.tsx  Logo.tsx  SettingsView.tsx  ThemePicker.tsx
src/components/layout/: DetailPanel.tsx  DownloadCard.tsx  MainPanel.tsx  Sidebar.tsx  UrlQuickAdd.tsx
src/components/ui/: button.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  separator.tsx  switch.tsx
src/lib/: api.ts  clipboard.ts  theme.ts  toast.tsx  types.ts  utils.ts
