[package]
name = "kuroaria-dl"
version = "0.2.0"
description = "Premium download manager powered by aria2"
authors = ["KuroAria"]
edition = "2021"

[lib]
name = "kuroaria_dl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], default-features = true }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "time", "rt", "process", "macros", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rfd = "0.16"
tokio-tungstenite = "0.24"
futures-util = "0.3"
socket2 = "0.5"
tauri-plugin-clipboard-manager = "2.3.2"
